<resources>
    <string name="app_name">bloodBank</string>
    <string name="search_donor">Search Donor</string>
    <string name="blood_group">Blood Group</string>
    <string name="locality">Locality</string>
    <string name="search">Search</string>
    <string name="add">ADD</string>
    <string name="name">Name :</string>
    <string name="blood_type">Blood Type</string>
    <string name="mobile">Mobile :</string>
    <string name="enter_ur_name">Enter ur Name</string>
    <string-array name="blood_spiner">
        <item>Enter ur Blood type</item>
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>
    <string-array name="city">

        <item>Enter ur Location</item>
        <item>Cairo</item>
        <item>Benha</item>
        <item>Zhagazig</item>
        <item>Menoufia</item>
        <item>Alexandria</item>
        <item>Tanta</item>
    </string-array>
</resources>